--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -61,7 +61,7 @@
     <ion-slides [options]="slideOpts">
       <ion-slide>
         <ion-card class="welcome-card">
-          <ion-img src="/assets/shapes.svg"></ion-img>
+          <ion-img src="/assets/images/person1.jpg"></ion-img>
           <ion-card-header>
             <ion-card-title>Nephrotic Syndrome</ion-card-title>
           </ion-card-header>
@@ -69,7 +69,7 @@
       </ion-slide>
       <ion-slide>
         <ion-card class="welcome-card">
-          <ion-img src="/assets/shapes.svg"></ion-img>
+          <ion-img src="/assets/images/person1.jpg"></ion-img>
           <ion-card-header>
             <ion-card-title>Palmar</ion-card-title>
           </ion-card-header>
