--- a/src/assets/css/drbhadja.scss
+++ b/src/assets/css/drbhadja.scss
@@ -9,13 +9,19 @@ p                               { margin: 0px 0px 15px; font-size: 14px; line-he
 .sub-text                       { font-size: 12.5px; line-height: 15px; }
 .page-section                   { padding: 25px 0px;}
 .text-btn                       { margin: 0px; padding: 0px; height: auto; background: transparent !important; font-size: 16px; line-height: 19px; font-weight: 500; color: $blue-color !important; border-radius: 0px; border: none !important; }
-
+.title-btn                      { display: flex; }
 ion-card.common-card                { margin: 0px; padding: 12px; border-radius: 5px; box-shadow: 1px 3px 15px rgba(0,0,0,0.11); -webkit-box-shadow: 1px 3px 15px rgba(0,0,0,0.11); text-align: left; }
+ion-card.common-card.no-padding     { padding: 0px; }
 
+.before-after-section h2,
 .expert-drs-section h2              { margin: 0px 0px 0px 15px;}
-.expert-drs-section .common-card    { margin: 12px 0px 12px 15px;}
+.before-after-section .common-card,
+.expert-drs-section .common-card    { margin: 12px 0px 12px 15px; width: 100%;}
 .expert-drs-section .header-block   { margin-bottom: 10px;}
 .expert-drs-section .person-img     { margin-right: 8px; width: 50px; border-radius: 50%; }
 .expert-drs-section h3              { margin-bottom: 3px; }
 .expert-drs-section .sub-text       { margin: 0px; color: #757575; text-transform: uppercase; }
 .expert-drs-section .desc           { margin-bottom: 18px;}
+
+.diseases-adult-section             { padding: 20px 15px; }
+.diseases-adult-section {}
