--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-item>
-    <ion-label floating>Appointment for</ion-label>
+    <ion-label floating class="">Appointment for</ion-label>
     <ion-input  type="text">Mrs.Shusma Kataria</ion-input>
 </ion-item>
 
