home page changes
home page changes

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -78,24 +78,18 @@
     </div>
     <ion-slides [options]="diseasesSlideOpts">
       <ion-slide>
-        <ion-card class="common-card no-padding">
-          <ion-card-title>
-            Hypothyroidism
-          </ion-card-title>
+        <ion-card class="common-card">
+          <h1>Hypothyroidism</h1>
         </ion-card>
       </ion-slide>
       <ion-slide>
-        <ion-card class="common-card no-padding">
-          <ion-card-title>
-            Arthritis
-          </ion-card-title>
+        <ion-card class="common-card">
+          <h1>Arthritis</h1>
         </ion-card>
       </ion-slide>
       <ion-slide>
-        <ion-card class="common-card no-padding">
-          <ion-card-title>
-            Infertility
-          </ion-card-title>
+        <ion-card class="common-card">
+          <h1>Infertility</h1>
         </ion-card>
       </ion-slide>
 
