--- a/src/assets/css/drbhadja.scss
+++ b/src/assets/css/drbhadja.scss
@@ -3,18 +3,22 @@
 $blue-color: #0d84db;
 
 html body                       { font-family: 'Roboto', sans-serif; color: #212121; }
+h1                              { margin: 0px 0px 12px; font-size: 18px; line-height: 26px; color: #212121; font-weight: 700; }
 h2                              { margin: 0px 0px 12px; font-size: 16px; line-height: 19px; color: #212121; font-weight: 700; }
 h3                              { margin: 0px 0px 15px; font-size: 16px; line-height: 19px; color: #212121; font-weight: 600; }
 p                               { margin: 0px 0px 15px; font-size: 14px; line-height: 19px; }
 .sub-text                       { font-size: 12.5px; line-height: 15px; }
 .page-section                   { padding: 25px 0px;}
 .text-btn                       { margin: 0px; padding: 0px; height: auto; background: transparent !important; font-size: 16px; line-height: 19px; font-weight: 500; color: $blue-color !important; border-radius: 0px; border: none !important; }
-.title-btn                      { display: flex; }
+.title-btn                      { padding: 0px 15px; display: flex; }
+.title-btn h2                   { margin: 0px; }
+
 ion-card.common-card                { margin: 0px; padding: 12px; border-radius: 5px; box-shadow: 1px 3px 15px rgba(0,0,0,0.11); -webkit-box-shadow: 1px 3px 15px rgba(0,0,0,0.11); text-align: left; }
 ion-card.common-card.no-padding     { padding: 0px; }
 
 .before-after-section h2,
 .expert-drs-section h2              { margin: 0px 0px 0px 15px;}
+.diseases-adult-section .common-card,
 .before-after-section .common-card,
 .expert-drs-section .common-card    { margin: 12px 0px 12px 15px; width: 100%;}
 .expert-drs-section .header-block   { margin-bottom: 10px;}
@@ -23,5 +27,7 @@ ion-card.common-card.no-padding     { padding: 0px; }
 .expert-drs-section .sub-text       { margin: 0px; color: #757575; text-transform: uppercase; }
 .expert-drs-section .desc           { margin-bottom: 18px;}
 
-.diseases-adult-section             { padding: 20px 15px; }
-.diseases-adult-section {}
+.diseases-adult-section             { padding: 20px 0px; }
+.diseases-adult-section h1          { margin: 2px 0px; font-weight: 400; color: #17cf93; text-align: center; }
+.diseases-adult-section ion-slide:nth-child(2n) h1 { color: #ffb837; }
+.diseases-adult-section ion-slide:nth-child(3n) h1 { color: #b142ff; }
