--- a/src/app/rate/rate.page.html
+++ b/src/app/rate/rate.page.html
@@ -5,40 +5,55 @@
 </ion-header>
 
 <ion-content>
-<button (click)="presentModal()">
-  Write a review
-</button>
-<ion-list>
-<ion-item>
-  <ion-label>
-      Kaushal Joshi   
-  </ion-label>
-  <rating  readonly="true"  size="default" (rateChange)="onRateChange($event)">
-  </rating>
-  <p>
-      Dr. Dharmesh Bhadja has a great knowledge, well versed experience and profound confidence. His diagnosis is absolute and flawless in both acute and chronic disease condition. His understanding of medicine is except.. Read More
-  </p>
-</ion-item>
-<ion-item>
-    <ion-label>
-        Dr.Rajendra Patel   
-    </ion-label>
-    <rating  readonly="true"  size="default" (rateChange)="onRateChange($event)">
-    </rating>
-    <p>
-        My mother was suffering from stomach,gas and other related problems.after consult with Dr.Bhadja sir .my mother is filling very well.it is good experience for me and my mother.
-    </p>
-  </ion-item>
-  <ion-item>
-      <ion-label>
-          Dr.Rajendra Patel
-      </ion-label>
-      <rating  readonly="true"  size="default" (rateChange)="onRateChange($event)">
-      </rating>
-      <p>
-          It was a healthy experience each and everytime to get treatment from Dr Bhadja's Homeopathic clinic. It's not just visit but a journey.
-      </p>
-    </ion-item>
-   
-</ion-list>
+  <div class="page-section">
+    <div class="ion-text-right">
+      <button class="review-btn" (click)="presentModal()">
+        Write a review
+      </button>
+    </div>
+    <ul class="review-list">
+      <li>
+        <div class="review-title">
+          <h1>Kaushal Joshi</h1>
+          <rating readonly="true" size="default" (rateChange)="onRateChange($event)">
+          </rating>
+        </div>
+        <div class="review-dsec">
+          <p>
+            Dr. Dharmesh Bhadja has a great knowledge, well versed experience and profound confidence. His diagnosis is
+            absolute and flawless in both acute and chronic disease condition. His understanding of medicine is except..
+            <button class="text-btn">Read More</button>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="review-title">
+          <h1>Dr.Rajendra Patel</h1>
+          <rating readonly="true" size="default" (rateChange)="onRateChange($event)">
+          </rating>
+        </div>
+        <div class="review-dsec">
+          <p>
+            My mother was suffering from stomach,gas and other related problems.after consult with Dr.Bhadja sir .my
+            mother
+            is filling very well.it is good experience for me and my mother.
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="review-title">
+          <h1>Dr.Rajendra Patel</h1>
+          <rating readonly="true" size="default" (rateChange)="onRateChange($event)">
+          </rating>
+        </div>
+        <div class="review-dsec">
+          <p>
+            It was a healthy experience each and everytime to get treatment from Dr Bhadja's Homeopathic clinic. It's
+            not
+            just visit but a journey.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </ion-content>
